--- a/public/full_window.html
+++ b/public/full_window.html
@@ -78,7 +78,7 @@
       console.log("onerror: " + event);
     };
   </script>
-  <script async type="text/javascript" src="dice.js"></script>
+  <script async type="text/javascript" src="Olha_o_sapo.js"></script>
 </body>
 
 </html>
